# furthest-building-you-can-reach

./: .gitignore  CMakeLists.txt  main.cpp
test-data/: 100.txt
